# CV-Infer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
third_parties/onnxruntime/include/: onnxruntime_cxx_inline.h
third_parties/opencv-4.10.0/: CMakeCache.txt
